--- a/templates/base.html
+++ b/templates/base.html
@@ -24,12 +24,15 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="/contact/">Contacto!! </a>
+                    <a class="nav-link" href="/app_product/heladeras.html/">Heladeras </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/products/">Productos</a>
+                    <a class="nav-link" href="/app_product/Detail_Celulares/">Celulares</a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link" href="/app_product/Detail_Televisores/">Televisores</a>
+                </li>
+                    <li class="nav-item">
                     <a class="nav-link" href="/products/create-products/">Carga Productos</a> 
                 </li>
             </ul>
