--- a/templates/base.html
+++ b/templates/base.html
@@ -24,7 +24,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="/Detail_Heladeras/">Heladeras </a>
+                    <a class="nav-link" href="/heladeras/">Heladeras </a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/app_product/Detail_Celulares/">Celulares</a>
