navegacion templates terminados

--- a/templates/base.html
+++ b/templates/base.html
@@ -26,13 +26,13 @@
                 <li class="nav-item active">
                     <a class="nav-link" href="/heladeras/">Heladeras </a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/app_product/Detail_Celulares/">Celulares</a>
+                <li class="nav-item active">
+                    <a class="nav-link" href="/celulares/">Celulares</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/app_product/Detail_Televisores/">Televisores</a>
+                <li class="nav-item active">
+                    <a class="nav-link" href="/televisores/">Televisores</a>
                 </li>
-                    <li class="nav-item">
+                    <li class="nav-item active">
                     <a class="nav-link" href="/products/create-products/">Carga Productos</a> 
                 </li>
             </ul>
