eliminacion de duplicados y funciones que no se van a usar

--- a/templates/productos.html
+++ b/templates/productos.html
@@ -17,7 +17,7 @@
             <h5 class="card-title">{{heladera.name}}</h5>
             <p class="card-text">{{heladera.description}}</p>
             <p class="card-text">{{heladera.price}}</p>
-            <a href="/products/detail-product/{{product.id}}/" class="btn btn-primary">Ver mas!</a>
+            <a href="/list_products/" class="btn btn-primary">Ver mas!</a>
         </div>
     </div>
 
