--- a/templates/index.html
+++ b/templates/index.html
@@ -5,5 +5,7 @@ Inicio
 {% endblock %}
 
 {% block contenido %}
-<h1>Buen dia</h1>
+<<h1> Buenos dias!
+    Este es el proyecto de Leandro, Lautaro y Luciano!
+</h1>
 {% endblock %}
