--- a/templates/celulares.html
+++ b/templates/celulares.html
@@ -5,5 +5,5 @@ Inicio
 {% endblock %}
 
 {% block contenido %}
-<h1>Aca va el contenido de celulares</h1>
+<h1 style="margin-left:30rem">Aca va el contenido de celulares</h1>
 {% endblock %}
