--- a/templates/heladeras.html
+++ b/templates/heladeras.html
@@ -10,11 +10,11 @@
 {{message}}
 
 <div class="d-flex" style="margin-top:5rem; margin-left:7rem">
-    {% for Heladera in Heladeras %}
+    {% for heladera in heladeras %}
 
     <div class="card" style="width: 18rem;">
         <div class="card-body">
-            <h5 class="card-title">{{Heladeras.name}}</h5>
+            <h5 class="card-title">{{heladera.name}}</h5>
             <p class="card-text">{{heladera.description}}</p>
             <p class="card-text">{{heladera.price}}</p>
             <a href="/list_products/" class="btn btn-primary">Ver mas!</a>
