--- a/templates/base.html
+++ b/templates/base.html
@@ -33,7 +33,7 @@
                     <a class="nav-link" href="/televisores/">Televisores</a>
                 </li>
             </ul>
-            <form class="form-inline my-2 my-lg-0" action = "/products/search-product/" method = "GET">
+            <form class="form-inline my-2 my-lg-0" action = "/search_product/" method = "GET">
                 <input class="form-control mr-sm-2" type="text" placeholder="Buscar" aria-label="Search" name = 'search'>
                 <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
             </form>
