--- a/templates/celulares.html
+++ b/templates/celulares.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block contenido %}
-<h1 style="margin-left:30rem">Aca va el contenido de celulares</h1>
+<h1 style="margin-left:30rem">Estos son nuestros celulares</h1>
 
 {{message}}
 
@@ -15,8 +15,10 @@
     <div class="card" style="width: 18rem;">
         <div class="card-body">
             <h5 class="card-title">{{celular.name}}</h5>
-            <!-- <p class="card-text">{{heladera.description}}</p>
-            <p class="card-text">{{heladera.price}}</p> -->
+            <p class="card-text">Precio: {{celular.price}}</p> 
+            <p class="card-text">Pulgadas: {{celular.inches}}</p> 
+            <p class="card-text">Descripcion: {{celular.description}}</p> 
+            <p class="card-text">SKU: {{celular.SKU}}</p>
             <a href="/list_products/" class="btn btn-primary">Ver mas!</a>
         </div>
     </div>
