--- a/templates/televisores.html
+++ b/templates/televisores.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block contenido %}
-<h1 style="margin-left:30rem">Aca va el contenido de televisores</h1>
+<h1 style="margin-left:30rem">Estos son nuestros televisores</h1>
 
 {{message}}
 
@@ -15,8 +15,10 @@
     <div class="card" style="width: 18rem;">
         <div class="card-body">
             <h5 class="card-title">{{televisor.name}}</h5>
-            <!-- <p class="card-text">{{heladera.description}}</p>
-            <p class="card-text">{{heladera.price}}</p> -->
+            <p class="card-text">Precio: {{televisor.price}}</p>
+            <p class="card-text">Pulgadas: {{televisor.inches}}</p>
+            <p class="card-text">Descripcion: {{televisor.description}}</p>
+            <p class="card-text">SKU: {{televisor.SKU}}</p> 
             <a href="/list_products/" class="btn btn-primary">Ver mas!</a>
         </div>
     </div>
