--- a/templates/celulares.html
+++ b/templates/celulares.html
@@ -7,6 +7,10 @@
 {% block contenido %}
 <h1 style="margin-left:30rem">Estos son nuestros celulares</h1>
 
+<form class="form-inline my-2 my-lg-0" action = "/celulares/" method = "GET">
+    <button style="margin-left:40rem" class="btn btn-primary" type="submit">Cree su propio Celular</button>
+</form>
+
 {{message}}
 
 <div class="d-flex" style="margin-top:5rem; margin-left:7rem">
