--- a/templates/heladeras.html
+++ b/templates/heladeras.html
@@ -8,7 +8,7 @@
 <h1 style="margin-left:30rem">Estas son nuestras heladeras</h1>
 
 <form class="form-inline my-2 my-lg-0" action = "/celulares/" method = "GET">
-    <button style="margin-left:40rem" class="btn btn-primary" type="submit">Cree su propia heladera</button>
+    <button style="margin-left:40rem" class="btn btn-primary" type="submit">Cree su propia Heladera</button>
 </form>
 
 {{message}}
