creando el footer

--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@ Inicio
 {% endblock %}
 
 {% block contenido %}
-<<h1> Buenos dias!
-    Este es el proyecto de Leandro, Lautaro y Luciano!
+<h1> Buenos dias!
+    Este es el proyecto de Leandro y Luciano!
 </h1>
 {% endblock %}
