--- a/templates/base.html
+++ b/templates/base.html
@@ -48,6 +48,14 @@
     
     {% endblock %}
 
+
+<footer>
+    <div class="container-fluid bg-light text-center p-3">
+        <p class="sm">&copy; Todos los derechos reservados por Leandro y Luciano </p>
+    </div>
+</footer>
+
+
 </body>
 
 <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
@@ -56,5 +64,6 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-fQybjgWLrvvRgtW6bFlB7jaZrFsaBXjsOMm/tB9LTS58ONXgqbR9W8oWht/amnpF"
     crossorigin="anonymous"></script>
+
 
 </html>
