prueba de footer

--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,6 @@ Inicio
 
 {% block contenido %}
 <h1> Buenos dias!
-    Este es el proyecto de Leandro y Luciano!
+    Este es el proyecto de Leandro, Lautaro y Luciano!
 </h1>
 {% endblock %}
