--- a/templates/base.html
+++ b/templates/base.html
@@ -50,8 +50,8 @@
 
 
 <footer>
-    <div class="container-fluid bg-light text-center p-3">
-        <p class="sm">&copy; Todos los derechos reservados por Leandro y Luciano </p>
+    <div class="footer">
+        <p class="sm">&copy; Todos los derechos reservados por Leandro, Lautaro y Luciano </p>
     </div>
 </footer>
 
