rutas de los botanes hacia los templates y reverse

--- a/templates/televisores.html
+++ b/templates/televisores.html
@@ -7,7 +7,7 @@
 {% block contenido %}
 <h1 style="margin-left:30rem">Estos son nuestros televisores</h1>
 
-<form class="form-inline my-2 my-lg-0" action = "/celulares/" method = "GET">
+<form class="form-inline my-2 my-lg-0" action = "/crear_televisor/" method = "GET">
     <button style="margin-left:40rem" class="btn btn-primary" type="submit">Cree su propio Televisor</button>
 </form> 
 
