--- a/templates/celulares.html
+++ b/templates/celulares.html
@@ -7,8 +7,8 @@
 {% block contenido %}
 <h1 style="margin-left:30rem">Estos son nuestros celulares</h1>
 
-<form class="form-inline my-2 my-lg-0" action = "/celulares/" method = "GET">
-    <button style="margin-left:40rem" class="btn btn-primary" type="submit">Cree su propio Celular</button>
+<form class="form-inline my-2 my-lg-0" action = "/crear_celular/" method = "GET">
+    <button style="margin-left:40rem"  class="btn btn-primary" type="submit">Cree su propio Celular</button>
 </form>
 
 {{message}}
