--- a/templates/televisores.html
+++ b/templates/televisores.html
@@ -19,10 +19,10 @@
     <div class="card" style="width: 18rem;">
         <div class="card-body">
             <h5 class="card-title">{{televisor.name}}</h5>
-            <p class="card-text">Precio: {{televisor.price}}</p>
+            <!-- <p class="card-text">Precio: {{televisor.price}}</p>
             <p class="card-text">Pulgadas: {{televisor.inches}}</p>
             <p class="card-text">Descripcion: {{televisor.description}}</p>
-            <p class="card-text">SKU: {{televisor.SKU}}</p> 
+            <p class="card-text">SKU: {{televisor.SKU}}</p>  -->
             <a href="/list_products/" class="btn btn-primary">Ver mas!</a>
         </div>
     </div>
