--- a/templates/heladeras.html
+++ b/templates/heladeras.html
@@ -19,10 +19,10 @@
     <div class="card" style="width: 18rem;">
         <div class="card-body">
             <h5 class="card-title">{{heladera.name}}</h5>
-            <p class="card-text">Precio: {{heladera.price}}</p>
+            <!-- <p class="card-text">Precio: {{heladera.price}}</p>
             <p class="card-text">Litros: {{heladera.litters}}</p>
             <p class="card-text">Descripcion: {{heladera.description}}</p>
-            <p class="card-text">SKU: {{heladera.SKU}}</p>
+            <p class="card-text">SKU: {{heladera.SKU}}</p> -->
             <a href="/list_products/" class="btn btn-primary">Ver mas!</a>
         </div>
     </div>
