boton en el medio

--- a/templates/detalles_celulares.html
+++ b/templates/detalles_celulares.html
@@ -7,7 +7,7 @@
 {% block contenido %}
 <h1 style="margin-left:30rem">Estos son los detalles de nuestros celulares</h1>
 
-<a href="/celulares/" class="btn btn-primary">Volver atras!</a>
+<a style="margin-left:50rem" href="/celulares/" class="btn btn-primary">Volver atras!</a>
 
 {{message}}
 
@@ -26,7 +26,9 @@
         </div>
     </div>
 
+
+    
     {% endfor %}
 
-
 {% endblock %}
+
