funcion detalle_celulares operativa

--- a/templates/celulares.html
+++ b/templates/celulares.html
@@ -19,11 +19,8 @@
     <div class="card" style="width: 18rem;">
         <div class="card-body">
             <h5 class="card-title">{{celular.name}}</h5>
-            <!-- <p class="card-text">Precio: {{celular.price}}</p> 
-            <p class="card-text">Pulgadas: {{celular.inches}}</p> 
-            <p class="card-text">Descripcion: {{celular.description}}</p> 
-            <p class="card-text">SKU: {{celular.SKU}}</p> -->
-            <a href="/detalles_celulares/" class="btn btn-primary">Ver mas!</a>
+            <p class="card-text">Precio: {{celular.price}}</p> 
+            <a href="/detalle_celulares/{{celular.id}}/" class="btn btn-primary">Ver mas!</a>
         </div>
     </div>
 
