funcion detalle_heladeras operativa

--- a/templates/heladeras.html
+++ b/templates/heladeras.html
@@ -19,11 +19,8 @@
     <div class="card" style="width: 18rem;">
         <div class="card-body">
             <h5 class="card-title">{{heladera.name}}</h5>
-            <!-- <p class="card-text">Precio: {{heladera.price}}</p>
-            <p class="card-text">Litros: {{heladera.litters}}</p>
-            <p class="card-text">Descripcion: {{heladera.description}}</p>
-            <p class="card-text">SKU: {{heladera.SKU}}</p> -->
-            <a href="/list_products/" class="btn btn-primary">Ver mas!</a>
+            <p class="card-text">Precio: {{heladera.price}}</p>
+            <a href="/detalle_heladeras/{{heladera.id}}/" class="btn btn-primary">Ver mas!</a>
         </div>
     </div>
 
