--- a/templates/base.html
+++ b/templates/base.html
@@ -49,11 +49,28 @@
     {% endblock %}
 
 
-<footer>
-    <div class="footer">
-        <p class="sm">&copy; Todos los derechos reservados por Leandro, Lautaro y Luciano </p>
-    </div>
-</footer>
+    <footer>
+        <div class="row p-3 container-fluid bg-secondary text-white text-center p-3">
+
+            <div class="col-xs-12 col-md-6  col-lg-4">
+                <p class="h5">Este proyecto fue realizado con mucha dedicacion.
+                    Gracias por las enseñanzas
+                </p>
+            </div>
+
+            <div class="col-xs-12 col-md-6  col-lg-4">
+                <a class="h5 text-white text-decoration-none" href="#"> Contacto </a>
+            </div>
+
+            <div class="col-xs-12 col-md-6  col-lg-4">
+                <a class="h5 text-white text-decoration-none" href="#">About Us</a>
+            </div>
+        
+            <div class="pt-4 pb-1 col-xs-12 col-md-6  col-lg-12">
+                <p class="sm">&copy; Todos los derechos reservados por Leandro, Lautaro y Luciano </p>
+            </div>
+        </div>
+    </footer>
 
 
 </body>
