Colores de html cambiados para darle mejor forma

--- a/templates/base.html
+++ b/templates/base.html
@@ -14,8 +14,8 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar " style="background: lightblue;">
-        <a class="navbar-brand" href="/">Inicio</a>
+    <nav class="navbar navbar-expand-lg navbar " style="background: grey;">
+        <a class="navbar-brand text-white" href="/">Inicio</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -24,18 +24,18 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="/heladeras/">Heladeras </a>
+                    <a class="nav-link text-white" href="/heladeras/">Heladeras </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/celulares/">Celulares</a>
+                    <a class="nav-link text-white" href="/celulares/">Celulares</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/televisores/">Televisores</a>
+                    <a class="nav-link text-white" href="/televisores/">Televisores</a>
                 </li>
             </ul>
             <form class="form-inline my-2 my-lg-0" action = "/search_product/" method = "GET">
                 <input class="form-control mr-sm-2" type="text" placeholder="Buscar" aria-label="Search" name = 'search'>
-                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+                <button class="btn btn-secondary" type="submit">Search</button>
             </form>
         </div>
     
