--- a/templates/detalle_celulares.html
+++ b/templates/detalle_celulares.html
@@ -21,8 +21,8 @@
             <p class="card-text">Pulgadas: {{detalle_celulares.inches}}</p> 
             <p class="card-text">Descripcion: {{detalle_celulares.description}}</p> 
             <p class="card-text">SKU: {{detalle_celulares.SKU}}</p> 
-            <a href="/list_products/" class="btn btn-primary">Editar</a>
-            <a href="/list_products/" class="btn btn-primary">Eliminar</a>
+            <a href="/detalle_celulares/editar_celular/{{detalle_celulares.id}}/" class="btn btn-primary">Editar</a>
+            <a href="/eliminar_celular/{{detalle_celulares.id}}/" class="btn btn-primary">Eliminar</a>
         </div>
     </div>
 
