--- a/templates/base.html
+++ b/templates/base.html
@@ -11,10 +11,20 @@
     </title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"
         integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
+
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar " style="background: grey;">
+    
+
+
+
+
+
+
+
+
+    <nav class="navbar navbar-expand-lg navbar " style="background: rgb(90, 214, 134);">
         <a class="navbar-brand text-white" href="/">Inicio</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -33,24 +43,21 @@
                     <a class="nav-link text-white" href="/televisores/">Televisores</a>
                 </li>
             </ul>
-            <form class="form-inline my-2 my-lg-0" action = "/search_product/" method = "GET">
-                <input class="form-control mr-sm-2" type="text" placeholder="Buscar" aria-label="Search" name = 'search'>
+            <form class="form-inline my-2 my-lg-0" action="/search_product/" method="GET">
+                <input class="form-control mr-sm-2" type="text" placeholder="Buscar" aria-label="Search" name='search'>
                 <button class="btn btn-secondary" type="submit">Search</button>
             </form>
         </div>
-    
+
     </nav>
 
-    
-    
-    
+
     {% block contenido %}
-    
+
     {% endblock %}
 
-
-    <footer>
-        <div class="row p-3 container-fluid bg-secondary text-white text-center p-3">
+    <footer class="d-flex ">
+        <div class="row p-3 container-fluid  text-white text-center p-3" style="background: rgb(90, 214, 134);">
 
             <div class="col-xs-12 col-md-6  col-lg-4">
                 <p class="h5">Este proyecto fue realizado con mucha dedicacion.
@@ -65,7 +72,7 @@
             <div class="col-xs-12 col-md-6  col-lg-4">
                 <a class="h5 text-white text-decoration-none" href="#">About Us</a>
             </div>
-        
+
             <div class="pt-4 pb-1 col-xs-12 col-md-6  col-lg-12">
                 <p class="sm">&copy; Todos los derechos reservados por Leandro, Lautaro y Luciano </p>
             </div>
