--- a/templates/celulares.html
+++ b/templates/celulares.html
@@ -1,14 +1,14 @@
 {% extends 'base.html' %}
 
 {% block titulo %}
-    Productos
+Productos
 {% endblock %}
 
 {% block contenido %}
 <h1 style="margin-left:30rem">Estos son nuestros celulares</h1>
 
-<form class="form-inline my-2 my-lg-0" action = "/crear_celular/" method = "GET">
-    <button style="margin-left:40rem"  class="btn btn-primary" type="submit">Cree su propio Celular</button>
+<form class="form-inline my-2 my-lg-0" action="/crear_celular/" method="GET">
+    <button style="margin-left:40rem" class="btn btn-primary" type="submit">Cree su propio Celular</button>
 </form>
 
 {{message}}
@@ -19,12 +19,12 @@
     <div class="card" style="width: 18rem;">
         <div class="card-body">
             <h5 class="card-title">{{celular.name}}</h5>
-            <p class="card-text">Precio: {{celular.price}}</p> 
+            <p class="card-text">Precio: {{celular.price}}</p>
             <a href="/detalle_celulares/{{celular.id}}/" class="btn btn-primary">Ver mas!</a>
         </div>
     </div>
-
+</div>
     {% endfor %}
 
 
-{% endblock %}
+    {% endblock %}
