--- a/templates/televisores.html
+++ b/templates/televisores.html
@@ -1,15 +1,15 @@
 {% extends 'base.html' %}
 
 {% block titulo %}
-    Productos
+Productos
 {% endblock %}
 
 {% block contenido %}
 <h1 style="margin-left:30rem">Estos son nuestros televisores</h1>
 
-<form class="form-inline my-2 my-lg-0" action = "/crear_televisor/" method = "GET">
+<form class="form-inline my-2 my-lg-0" action="/crear_televisor/" method="GET">
     <button style="margin-left:40rem" class="btn btn-primary" type="submit">Cree su propio Televisor</button>
-</form> 
+</form>
 
 {{message}}
 
@@ -23,8 +23,8 @@
             <a href="/detalle_televisores/{{televisor.id}}/" class="btn btn-primary">Ver mas!</a>
         </div>
     </div>
-
+</div>
     {% endfor %}
 
 
-{% endblock %}
+    {% endblock %}
