--- a/templates/eliminar_heladera.html
+++ b/templates/eliminar_heladera.html
@@ -1,14 +1,13 @@
 {% extends 'base.html' %}
 
 {% block titulo %}
-    Eliminar Celular
+    Eliminar Heladera
 {% endblock %}
 
 {% block contenido %}
-
-    <a style="margin-left:50rem" href="/celulares/" class="btn btn-primary">Volver atras!</a>
+    <a style="margin-left:50rem" href="/heladeras/" class="btn btn-primary">Volver atras!</a>
     
-    <h3 style="color: red">Estas por eliminar el producto {{celular.name}}, estas seguro?</h3>
+    <h3 style="color: red">Estas por eliminar el producto {{heladera.name}}, estas seguro?</h3>
 
     <form method = "POST">
         {% csrf_token %}
