funcion editar_celulares  con reverse a detalle_ celulares

--- a/templates/detalle_celulares.html
+++ b/templates/detalle_celulares.html
@@ -21,7 +21,7 @@
             <p class="card-text">Pulgadas: {{detalle_celulares.inches}}</p> 
             <p class="card-text">Descripcion: {{detalle_celulares.description}}</p> 
             <p class="card-text">SKU: {{detalle_celulares.SKU}}</p> 
-            <a href="/detalle_celulares/editar_celular/{{detalle_celulares.id}}/" class="btn btn-primary">Editar</a>
+            <a href="/editar_celular/{{detalle_celulares.id}}/" class="btn btn-primary">Editar</a>
             <a href="/eliminar_celular/{{detalle_celulares.id}}/" class="btn btn-primary">Eliminar</a>
         </div>
     </div>
