--- a/templates/editar_heladera.html
+++ b/templates/editar_heladera.html
@@ -8,6 +8,7 @@ Editar Heladera
 
     {% if form %}
         <h2 style="margin-left:30rem">Complete los campos a editar</h2>
+        <a style="margin-left:50rem" href="/heladeras/" class="btn btn-primary">Volver atras!</a>
         <form action="" method="POST" style="margin-left:40rem;margin-top:7rem">
             {% csrf_token %}
             <table>
