--- a/templates/editar_televisor.html
+++ b/templates/editar_televisor.html
@@ -1,13 +1,14 @@
 {% extends 'base.html' %}
 
 {% block titulo %}
-Actualizar productos
+Editar Televisor
 {% endblock %}
 
 {% block contenido %}
 
     {% if form %}
         <h2 style="margin-left:30rem">Complete los campos a editar</h2>
+        <a style="margin-left:50rem" href="/televisores/" class="btn btn-primary">Volver atras!</a>
         <form action="" method="POST" style="margin-left:40rem;margin-top:7rem">
             {% csrf_token %}
             <table>
