cambio de texto en preguntas para eliminar

--- a/templates/eliminar_celular.html
+++ b/templates/eliminar_celular.html
@@ -8,7 +8,7 @@
 
     <a style="margin-left:50rem" href="/celulares/" class="btn btn-primary">Volver atras!</a>
     
-    <h3 style="color: red">Estas por eliminar el producto {{celular.name}}, estas seguro?</h3>
+    <h3 style="color: red">Estas por eliminar el celular {{celular.name}}, estas seguro?</h3>
 
     <form method = "POST">
         {% csrf_token %}
