--- a/templates/eliminar_televisor.html
+++ b/templates/eliminar_televisor.html
@@ -8,7 +8,7 @@
 
     <a style="margin-left:50rem" href="/televisores/" class="btn btn-primary">Volver atras!</a>
     
-    <h3 style="color: red">Estas por eliminar el producto {{televisor.name}}, estas seguro?</h3>
+    <h3 style="color: red">Estas por eliminar el televisor {{televisor.name}}, estas seguro?</h3>
 
     <form method = "POST">
         {% csrf_token %}
