--- a/templates/base.html
+++ b/templates/base.html
@@ -50,17 +50,16 @@
         </div>
 
     </nav>
-
-
     {% block contenido %}
 
-    {% endblock %}
 
-    <footer class="d-flex ">
+
+    {% endblock %}
+    <footer class="container-fluid  ">
         <div class="row p-3 container-fluid  text-white text-center p-3" style="background: rgb(90, 214, 134);">
 
             <div class="col-xs-12 col-md-6  col-lg-4">
-                <p class="h5">Este proyecto fue realizado con mucha dedicacion.
+                <p class="h5 text-center">Este proyecto fue realizado con mucha dedicacion.
                     Gracias por las enseñanzas
                 </p>
             </div>
