--- a/templates/celulares.html
+++ b/templates/celulares.html
@@ -5,11 +5,10 @@ Productos
 {% endblock %}
 
 {% block contenido %}
-<h1 style="margin-left:30rem">Estos son nuestros celulares</h1>
+<br>
+<h1 class="text-center col">Elija su Celular</h1>
 
-<form class="form-inline my-2 my-lg-0" action="/crear_celular/" method="GET">
-    <button style="margin-left:40rem" class="btn btn-primary" type="submit">Cree su propio Celular</button>
-</form>
+
 
 {{message}}
 
@@ -24,6 +23,11 @@ Productos
         </div>
     </div>
 </div>
+
+<form class="form-inline my-2 my-lg-0" action="/crear_celular/" method="GET">
+    <button style="margin-left:35rem" class="btn btn-primary" type="submit">Cree su propio Celular</button>
+</form>
+<br>
     {% endfor %}
 
 
