--- a/templates/televisores.html
+++ b/templates/televisores.html
@@ -5,13 +5,12 @@ Productos
 {% endblock %}
 
 {% block contenido %}
-<h1 style="margin-left:30rem">Estos son nuestros televisores</h1>
+<br>
+<h1 class="text-center col">Elija su Televisor</h1>
 
-<form class="form-inline my-2 my-lg-0" action="/crear_televisor/" method="GET">
-    <button style="margin-left:40rem" class="btn btn-primary" type="submit">Cree su propio Televisor</button>
-</form>
 
- {{message}}
+
+{{message}}
 
 <div class="d-flex" style="margin-top:5rem; margin-left:7rem">
     {% for televisor in televisores %}
@@ -24,7 +23,12 @@ Productos
         </div>
     </div>
 </div>
-    {% endfor %}
+
+<form class="form-inline my-2 my-lg-0" action="/crear_televisor/" method="GET">
+    <button style="margin-left:35rem" class="btn btn-primary" type="submit">Cree su propio Televisor</button>
+</form>
+<br>
+{% endfor %}
 
 
-    {% endblock %}
+{% endblock %}
