login register logout funcionando

--- a/templates/index.html
+++ b/templates/index.html
@@ -8,4 +8,9 @@ Inicio
 <h1> Buenos dias!
     Este es el proyecto de Leandro, Lautaro y Luciano!
 </h1>
+
+<br>
+<br>
+
+<h3>{{message}}</h3>
 {% endblock %}
