--- a/templates/base.html
+++ b/templates/base.html
@@ -18,12 +18,6 @@
     
 
 
-
-
-
-
-
-
     <nav class="navbar navbar-expand-lg navbar " style="background: rgb(90, 214, 134);">
         <a class="navbar-brand text-white" href="/">Inicio</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
@@ -42,6 +36,32 @@
                 <li class="nav-item">
                     <a class="nav-link text-white" href="/televisores/">Televisores</a>
                 </li>
+                
+                
+                
+                <li class="nav-item" style="margin-right: 40rem">
+                    
+                {% if request.user.is_authenticated %}
+                <li class="nav-item" style="margin-right: 2rem">
+                    <h5>{{request.user.username}}</h5>
+                </li>
+
+                <li class="nav-item">
+                    <img src="{{request.user.user_profile.image.url}}" style="height: 2rem;">
+                </li>
+
+                <li class="nav-item">
+                    <a class="nav-link text-white" href="/logout/">Logout</a>
+                </li>
+                {% else %}
+                <li class="nav-item">
+                    <a class="nav-link text-white" href="/login/">Login</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text-white" href="/register/">Register</a>
+                </li>
+                {% endif %}
+            
             </ul>
             <form class="form-inline my-2 my-lg-0" action="/search_product/" method="GET">
                 <input class="form-control mr-sm-2" type="text" placeholder="Buscar" aria-label="Search" name='search'>
