--- a/templates/base.html
+++ b/templates/base.html
@@ -18,7 +18,7 @@
     
 
 
-    <nav class="navbar navbar-expand-lg navbar " style="background: rgb(90, 214, 134);">
+    <nav class="navbar navbar-expand-lg navbar " style="background: rgb(0, 0, 0);">
         <a class="navbar-brand text-white" href="/">Inicio</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -42,7 +42,7 @@
                 <li class="nav-item" style="margin-right: 40rem">
                     
                 {% if request.user.is_authenticated %}
-                <li class="nav-item" style="margin-right: 2rem">
+                <li class="nav-item text-danger" style="margin-right: 2rem">
                     <h5>{{request.user.username}}</h5>
                 </li>
 
@@ -76,7 +76,7 @@
 
     {% endblock %}
     <footer class="container-fluid  ">
-        <div class="row p-3 container-fluid  text-white text-center p-3" style="background: rgb(90, 214, 134);">
+        <div class="row p-3 container-fluid  text-white text-center p-3" style="background: rgb(0, 0, 0);">
 
             <div class="col-xs-12 col-md-6  col-lg-4">
                 <p class="h5 text-center">Este proyecto fue realizado con mucha dedicacion.
