--- a/templates/heladeras.html
+++ b/templates/heladeras.html
@@ -8,7 +8,7 @@ Productos
 {% block contenido %}
 
 <br>
-<h1 class="text-center col">Elijas su Heladera</h1>
+<h1 class="text-center col">Elija su Heladera</h1>
 
 {{message}}
 
