--- a/templates/index.html
+++ b/templates/index.html
@@ -5,11 +5,37 @@ Inicio
 {% endblock %}
 
 {% block contenido %}
-<h1> Buenos dias!
-    Este es el proyecto de Leandro, Lautaro y Luciano!
-</h1>
 
-<br>
+<div class="col pt-4">
+    <!--login-register-->
+    <div class="col-auto ">
+        <a href="#" class="pr-4 fs-5 text-dark">LONGIN</a>
+        <a href="#" class="text-dark ">REGISTER</a>
+        
+    </div>
+
+    <div>
+        <h1 class="text-center fw-light pb-3">Bienvenido!</h1>
+
+        <p class="text-center ">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sit dignissimos sapiente
+            voluptate quibusdam accusamus ab aspernatur, cupiditate reprehenderit unde. Ea quisquam deserunt beatae ipsa
+            dolorum, cumque quos aut commodi minus!
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Non voluptates corporis delectus maxime nisi
+            possimus quaerat excepturi? Officia corporis dolorem voluptates eaque hic tempora. Soluta velit quos
+            suscipit accusantium reprehenderit.
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vel explicabo reiciendis accusamus recusandae
+            autem dicta assumenda excepturi sit voluptatum, voluptates animi deserunt vero praesentium tenetur
+            aspernatur perferendis voluptas qui cumque.
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequuntur, obcaecati in! Velit et dignissimos
+            doloribus fuga libero eligendi autem officiis unde. Praesentium nobis sit, excepturi blanditiis optio
+            maiores perferendis tempora!
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet, qui ad odit dolores necessitatibus illo
+            eveniet eius debitis, a impedit porro, fugit tempora quae obcaecati ipsa. Atque aspernatur in incidunt.
+        </p>
+
+    </div>
+
+</div>
 <br>
 
 <h3>{{message}}</h3>
