--- a/templates/base.html
+++ b/templates/base.html
@@ -15,11 +15,10 @@
 </head>
 
 <body>
-    
 
-
-    <nav class="navbar navbar-expand-lg navbar " style="background: rgb(0, 0, 0);">
-        <a class="navbar-brand text-white" href="/">Inicio</a>
+    <!--navbar-->
+    <nav class=" navbar-expand-lg navbar row text-white justify-content-between bg-dark aling-items-center  pt-3">
+        <a class="navbar-brand text-white pl-3" href="/">Inicio</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -36,60 +35,33 @@
                 <li class="nav-item">
                     <a class="nav-link text-white" href="/televisores/">Televisores</a>
                 </li>
-                
-                
-                
-                <li class="nav-item" style="margin-right: 40rem">
-                    
-                {% if request.user.is_authenticated %}
-                <li class="nav-item text-danger" style="margin-right: 2rem">
-                    <h5>{{request.user.username}}</h5>
-                </li>
-
-                <li class="nav-item">
-                    <img src="{{request.user.user_profile.image.url}}" style="height: 2rem;">
-                </li>
-
-                <li class="nav-item">
-                    <a class="nav-link text-white" href="/logout/">Logout</a>
-                </li>
-                {% else %}
-                <li class="nav-item">
-                    <a class="nav-link text-white" href="/login/">Login</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link text-white" href="/register/">Register</a>
-                </li>
-                {% endif %}
-            
             </ul>
-            <form class="form-inline my-2 my-lg-0" action="/search_product/" method="GET">
+            <form class="form-inline  my-2 my-lg-0 pr-3" action="/search_product/" method="GET">
                 <input class="form-control mr-sm-2" type="text" placeholder="Buscar" aria-label="Search" name='search'>
                 <button class="btn btn-secondary" type="submit">Search</button>
             </form>
         </div>
-
     </nav>
     {% block contenido %}
 
 
 
     {% endblock %}
-    <footer class="container-fluid  ">
-        <div class="row p-3 container-fluid  text-white text-center p-3" style="background: rgb(0, 0, 0);">
+    <footer class="aling-items-end">
+        <div class="row p-3 container-fluid  text-white text-center p-3" style="background: rgb(90, 214, 134);">
 
-            <div class="col-xs-12 col-md-6  col-lg-4">
-                <p class="h5 text-center">Este proyecto fue realizado con mucha dedicacion.
-                    Gracias por las enseñanzas
-                </p>
+            <div class="col-xs-12 col-md-6  col-lg-4  ">
+                <a href="#" class="row text-white pb-2" >Heladera</a>
+                <a href="#" class="row text-white  pb-2">Celulares</a>
+                <a href="#" class="row text-white">Televisores</a>
             </div>
 
             <div class="col-xs-12 col-md-6  col-lg-4">
-                <a class="h5 text-white text-decoration-none" href="#"> Contacto </a>
+                <a class="h5 text-white text-decoration-none" href="#"> Contactos </a>
             </div>
 
             <div class="col-xs-12 col-md-6  col-lg-4">
-                <a class="h5 text-white text-decoration-none" href="#">About Us</a>
+                <a class="h5 text-white text-decoration-none" href="#">Sobre Nosotros</a>
             </div>
 
             <div class="pt-4 pb-1 col-xs-12 col-md-6  col-lg-12">
