--- a/templates/televisores.html
+++ b/templates/televisores.html
@@ -5,19 +5,45 @@ Productos
 {% endblock %}
 
 {% block contenido %}
-<br>
-<h1 class="text-center col">Elija su Televisor</h1>
 
-<form class="form-inline my-2 my-lg-0" action="/crear_televisor/" method="GET">
-    <button style="margin-left:43rem" class="btn btn-primary" type="submit">Cree su propio Televisor</button>
-</form>
+<!--login-register-->
+<div class="col-auto pt-4 pl-5">
+    <a href="#" class="pr-4 fs-5 text-dark">LONGIN</a>
+    <a href="#" class="text-dark ">REGISTER</a>
+
+</div>
+
+<h1 class="text-center col">Elija su Televisor</h1>
 
 {{message}}
 
+    <form class="form-inline my-3 pr-4 my-lg-0" action="/crear_televisor/" method="GET">
+        <button style="margin-left:43rem" class="btn btn-primary " type="submit">Cree su propio Televisor</button>
+    </form>
 
-    {% for televisor in televisores %}
+{% for televisor in televisores %}
 
-    <div class="d-flex" style="margin-top:3rem; margin-left:4rem">
+<!--card-->
+
+<div class="container ">
+    <article class="col-4 justify-content-between">
+        <div class="card">
+            <img src="https://http2.mlstatic.com/D_NQ_NP_710945-MLA48007822991_102021-V.jpg" alt="" class="card-img">
+            <div class=" card-img-overlay text-white d-flex flex-column justify-content-end ">
+                <h4 class="card-title ">{{televisor.name}}</h4>
+                <p class="card-text">Precio: {{televisor.price}}</p>
+                <a href="/detalle_televisores/{{televisor.id}}/" class="btn btn-dark aling-items-center">Ver
+                    mas!</a>
+            </div>
+        </div>
+    </article>
+
+</div>
+
+
+
+
+<!--<div class="d-flex" style="margin-top:3rem; margin-left:4rem">
     <div class="card" style="width: 18rem;">
         <div class="card-body">
             <h5 class="card-title">{{televisor.name}}</h5>
@@ -25,7 +51,7 @@ Productos
             <a href="/detalle_televisores/{{televisor.id}}/" class="btn btn-primary">Ver mas!</a>
         </div>
     </div>
-</div>
+</div>-->
 
 <br>
 {% endfor %}
