--- a/templates/base.html
+++ b/templates/base.html
@@ -75,8 +75,9 @@
 
 
     {% endblock %}
-    <footer class="container-fluid  ">
-        <div class="row p-3 container-fluid  text-white text-center p-3" style="background: rgb(0, 0, 0);">
+    
+    <footer class="container-fluid-expand-lg ">
+        <div class="row p-3 container-fluid-expand-lg  text-white text-center p-3" style="background: rgb(0, 0, 0);">
 
             <div class="col-xs-12 col-md-6  col-lg-4">
                 <p class="h5 text-center">Este proyecto fue realizado con mucha dedicacion.
