--- a/templates/base.html
+++ b/templates/base.html
@@ -16,9 +16,7 @@
 
 <body>
     
-
-
-    <nav class="navbar navbar-expand-lg navbar " style="background: rgb(0, 0, 0);">
+    <nav class="navbar navbar-expand-lg navbar" style="background: rgb(0, 0, 0);">
         <a class="navbar-brand text-white" href="/">Inicio</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -36,18 +34,11 @@
                 <li class="nav-item">
                     <a class="nav-link text-white" href="/televisores/">Televisores</a>
                 </li>
-                
-                
-                
                 <li class="nav-item" style="margin-right: 40rem">
                     
                 {% if request.user.is_authenticated %}
-                <li class="nav-item text-danger" style="margin-right: 2rem">
+                <li class="nav-item text-white" style="margin-right: 2rem">
                     <h5>{{request.user.username}}</h5>
-                </li>
-
-                <li class="nav-item">
-                    <img src="{{request.user.user_profile.image.url}}" style="height: 2rem;">
                 </li>
 
                 <li class="nav-item">
@@ -68,14 +59,13 @@
                 <button class="btn btn-secondary" type="submit">Search</button>
             </form>
         </div>
-
     </nav>
+
     {% block contenido %}
 
 
-
     {% endblock %}
-    <footer class="container-fluid-expand-lg ">
+    <footer class="container-fluid-expand-lg margin-botton 0 margin-top 0">
         <div class="row p-3 container-fluid-expand-lg  text-white text-center p-3" style="background: rgb(0, 0, 0);">
 
             <div class="col-xs-12 col-md-6  col-lg-4">
@@ -85,7 +75,7 @@
             </div>
 
             <div class="col-xs-12 col-md-6  col-lg-4">
-                <a class="h5 text-white text-decoration-none" href="#"> Contacto </a>
+                <a class="h5 text-white text-decoration-none" href="/contact/"> Contacto </a>
             </div>
 
             <div class="col-xs-12 col-md-6  col-lg-4">
